--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "expo": "~54.0.0",
+    "expo-file-system": "~19.0.21",
     "expo-image-picker": "~17.0.9",
     "expo-linear-gradient": "^15.0.8",
     "expo-location": "~19.0.8",
@@ -22,6 +24,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "zustand": "^4.4.7"
